--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ h2 {
   justify-content: center;
 }
 
-button {
+.button-style {
   width: 10%;
   height: 100%;
   font-family: 'Architects Daughter', sans-serif;
@@ -54,7 +54,7 @@ button {
   transition: 0.3s;
 }
 
-button:hover {
+.button-style-click {
   transform: translateY(10px);
   box-shadow: none;
   background-color: rgb(26, 22, 22);
