--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ h2 {
 }
 
 .button-style {
-  width: 10%;
+  width: 11%;
   height: 100%;
   font-family: 'Architects Daughter', sans-serif;
   font-size: 1.5rem;
@@ -58,4 +58,10 @@ h2 {
   transform: translateY(10px);
   box-shadow: none;
   background-color: rgb(26, 22, 22);
+}
+
+@media (max-width:675px) {
+  .button-style {
+    width: 13%;
+  }
 }
